<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <!-- 1. Toolbar fixa no topo -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MyApp.Toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_toolbar"
        app:titleTextAppearance="@style/TextAppearance.MyApp.Toolbar.Title"
        app:titleTextColor="@color/white" />

    <!-- Conteúdo rolável verticalmente -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingBottom="56dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/frameBanner"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin">

            <!-- 1. Saudação -->
            <TextView
                android:id="@+id/textviewHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_hello_name"
                android:textSize="@dimen/text_size_hello"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- 2. Título -->
            <TextView
                android:id="@+id/textviewLearn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_learn_today"
                android:textSize="@dimen/text_size_learn"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textviewHello" />

            <ImageView
                android:id="@+id/imageview_development"
                android:layout_width="@dimen/main_image_size"
                android:layout_height="@dimen/main_image_size"
                android:layout_marginStart="@dimen/image_margin_start"
                android:layout_marginTop="@dimen/margin_top_images"
                android:contentDescription="@string/cont_image_development"
                android:src="@drawable/image_development"
                app:layout_constraintEnd_toStartOf="@+id/imageview_design"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textviewLearn" />

            <ImageView
                android:id="@+id/imageview_design"
                android:layout_width="@dimen/main_image_size"
                android:layout_height="@dimen/main_image_size"
                android:layout_marginTop="@dimen/margin_top_images"
                android:layout_marginEnd="@dimen/image_margin_end"
                android:contentDescription="@string/cont_image_design"
                android:src="@drawable/image_design"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageview_development"
                app:layout_constraintTop_toBottomOf="@+id/textviewLearn" />


            <ImageView
                android:id="@+id/imageview_ai"
                android:layout_width="@dimen/main_image_size"
                android:layout_height="@dimen/main_image_size"
                android:layout_marginStart="@dimen/image_margin_start"
                android:layout_marginTop="@dimen/margin_top_images"
                android:contentDescription="@string/cont_image_ai"
                android:src="@drawable/image_ai"
                app:layout_constraintEnd_toStartOf="@+id/imageview_explore"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageview_development" />

            <ImageView
                android:id="@+id/imageview_explore"
                android:layout_width="@dimen/main_image_size"
                android:layout_height="@dimen/main_image_size"
                android:layout_marginTop="@dimen/margin_top_images"
                android:layout_marginEnd="@dimen/image_margin_end"
                android:contentDescription="@string/cont_image_explore"
                android:src="@drawable/image_explore"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageview_ai"
                app:layout_constraintTop_toBottomOf="@+id/imageview_design" />

            <TextView
                android:id="@+id/textview_popular_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/text_popular_courses"
                android:textSize="@dimen/text_size_popular_course"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageview_ai" />

            <TextView
                android:id="@+id/textview_see_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/text_see_all"
                android:textSize="@dimen/text_size_see_all"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageview_ai" />

            <View
                android:id="@+id/view_courses"
                android:layout_width="0dp"
                android:layout_height="@dimen/course_view_height"
                android:layout_marginTop="8dp"
                android:background="@drawable/image_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_popular_course" />

            <TextView
                android:id="@+id/textview_android_development"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/text_android_development"
                android:textSize="@dimen/text_size_android_development"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/view_courses"
                app:layout_constraintStart_toStartOf="@+id/view_courses"
                app:layout_constraintTop_toTopOf="@+id/view_courses" />

            <ImageView
                android:layout_width="@dimen/course_icon_size"
                android:layout_height="@dimen/course_icon_size"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_android"
                app:layout_constraintBottom_toBottomOf="@+id/view_courses"
                app:layout_constraintEnd_toEndOf="@+id/view_courses"
                app:layout_constraintTop_toTopOf="@+id/view_courses"
                app:tint="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


    <!-- FrameLayout fixo para AdMob -->
    <FrameLayout
        android:id="@+id/frameBanner"
        android:layout_width="0dp"
        android:background="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>